# streaming-bracketed

./: '  .travis.yml  ChangeLog.md  README.md  package.cabal  package.vim  streaming-bracketed.cabal
tests/: doctests.hs  tests.hs
