name:                streaming-bracketed
version:             0.0.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              daniel
maintainer:          daniel@bogusemailserver.com
category:            Data,Streaming
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2

library
  exposed-modules:     
        Streaming.Bracketed
        Streaming.Bracketed.Internal
  build-depends:
        base            >=4.10 && <5,
        streaming       >=0.2.0.0,
        exceptions      >=0.10.0
  hs-source-dirs:      library
  default-language:    Haskell2010

