name:                streaming-bracketed
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              daniel
maintainer:          daniel@bogusemailserver.com
category:            Data,Streaming
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2

library
  exposed-modules:     
        Streaming.Bracketed
        Streaming.Bracketed.Internal
  build-depends:
        base            >= 4.10 && <5,
        streaming       >= 0.2.0.0 && < 0.3
  hs-source-dirs:      library
  default-language:    Haskell2010

test-suite tests
    type:           
        exitcode-stdio-1.0
    ghc-options:    
        -Wall -threaded
    hs-source-dirs: 
        tests
    main-is:        
        tests.hs
    build-depends:
        base            >= 4.10 && < 5,
        tasty           >= 0.10.1.1,              
        tasty-hunit     >= 0.9.2,
        streaming       >= 0.2.0.0 && < 0.3,
        streaming-bracketed  
    default-language:    
        Haskell2010
